generic/generic-output/generic-service.yaml
kind: Service
apiVersion: v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "360"
  name: generic-service
  namespace: validation-flow
spec:
  selector:
    app.kubernetes.io/instance: validation-flow-generic-instance
  ports:
    - name: generic-9090
      protocol: TCP
      port: 9090
      targetPort: 9090
    - name: generic-8001}
      protocol: TCP
      port: 8001}
      targetPort: 8001}
