generic/generic-output/generic-8001-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "370"
  name: generic-8001-route
  namespace: validation-flow
spec:
  to:
    kind: Service
    name: generic-service
    weight: 100
  port:
    targetPort: generic-8001
